phpgit-php74-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: phpgit-php74
  name: phpgit-php74
spec:
  containers:
  - env:
    - name: PHP_IDE_CONFIG
      value: '"serverName=php.home"'
    - name: XDEBUG_CONFIG
      value: '"remote_host=192.168.1.99"'
    image: phpgit_php74
    name: phpgit_php74
    resources: {}
  restartPolicy: Never
status: {}
