phpgit-php8-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: phpgit-php8
  name: phpgit-php8
spec:
  containers:
  - env:
    - name: PHP_IDE_CONFIG
      value: '"serverName=php.home"'
    - name: XDEBUG_CONFIG
      value: '"remote_host=192.168.1.99"'
    image: phpgit_php8
    name: phpgit_php8
    ports:
    - containerPort: 21
    - containerPort: 22
    - containerPort: 80
    - containerPort: 443
    - containerPort: 8080
    resources: {}
  restartPolicy: Never
status: {}
