selenium-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: selenium
  name: selenium
spec:
  containers:
  - env:
    - name: GRID_BROWSER_TIMEOUT
      value: "60"
    - name: GRID_MAX_SESSION
      value: "1"
    - name: GRID_TIMEOUT
      value: "60"
    image: selenium/standalone-chrome:3.9.0-antimony
    name: selenium
    ports:
    - containerPort: 4444
    - containerPort: 5900
    resources: {}
    volumeMounts:
    - mountPath: /tmp
      name: tmpShm
    - mountPath: /dev/shm
      name: tmpShm
  restartPolicy: Never
  volumes:
  - name: tmpShm
    persistentVolumeClaim:
      claimName: tmpShm
  - name: tmpShm
    persistentVolumeClaim:
      claimName: tmpShm
status: {}
