ap74-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ben\home\phpgit\kompose.exe convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ap74
  name: ap74
spec:
  ports:
  - name: "1983"
    port: 1983
    targetPort: 1983
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: ap74
status:
  loadBalancer: {}
