phpgit-php8-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ben\home\phpgit\kompose.exe convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: phpgit-php8
  name: phpgit-php8
spec:
  ports:
  - name: "21"
    port: 21
    targetPort: 21
  - name: "22"
    port: 22
    targetPort: 22
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: phpgit-php8
status:
  loadBalancer: {}
