selenium-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ben\home\phpgit\kompose.exe convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: selenium
  name: selenium
spec:
  ports:
  - name: "4444"
    port: 4444
    targetPort: 4444
  - name: "5900"
    port: 5900
    targetPort: 5900
  selector:
    io.kompose.service: selenium
status:
  loadBalancer: {}
