KubernetesCustomMetricHorizontalPodAutoscaler.yml
#     Only have to replace namespace: test,  test.uri && ingressclass in order to get it working ASAP
#  image : alptech/yuzu:swoolecert is openswool with cert made ( faster boot ); port 80 used for setting a value
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: test
  annotations:
    kubernetes.io/ingress.class: ingressclass

spec:
  rules:
    - host: test.uri
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: test
              servicePort: h80
---
apiVersion: v1
kind: Service
metadata:
  name: test-metrics-exporter
  namespace: test
  annotations:
    prometheus.io/port: '443'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 443
      protocol: TCP
      name: h443
  selector:
    app: test-metrics-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  ports:
    - port: 80
      protocol: TCP
      name: h80
  selector:
    app: test-metrics-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-metrics-exporter
  namespace: test
spec:
  selector:
    matchLabels:
      app: test-metrics-exporter
  template:
    metadata:
      labels:
        app: test-metrics-exporter
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: exporter
          configMap:
            name: exporter
            defaultMode: 0744
            items:
              - key: os.php
                path: os.php
              - key: 80.php
                path: 80.php
      containers:
        - name: test-metrics-exporter
          image: alptech/yuzu:swoolecert
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: exporter
              mountPath: /var/www/os.php
              subPath: os.php
            - name: exporter
              mountPath: /var/www/80.php
              subPath: 80.php
          command:
            - /bin/sh
            - -c
            - |
              printf 3 > a.value; # default Value for hpa at startup
              touch monolog.log;
              php os.php &
              php -S 0.0.0.0:80 80.php &
              tail -f monolog.log
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  namespace: test
spec:
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: alpine
          image: alpine
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              tail -f /dev/null
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    f=`uname -n`; touch __$f.terminated
                    pkill -9 1
