microServicesBenchmark.yml
# replace values :   namespace: test,ingressclass, swoosh.url, DB_HOST,DB_DATABASE,DB_USERNAME,DB_PASSWORD
# && then run ab on each service with a simple payload file ex: --data '{"sql":"select count(1) from table","cachetime":3600}'
# Pure php vs swoole vs Go -> runs a sql query towards a sql host, puts a valid cachefile for an hour, returns all rows as json result
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swoosh
  namespace: test
  annotations:
    kubernetes.io/ingress.class: ingressclass
spec:
  rules:
    - host: swoosh.url
      http:
        paths:
          - path: /swoole
            pathType: Prefix
            backend:
              serviceName: swoole
              servicePort: h80
          - path: /phps
            pathType: Prefix
            backend:
              serviceName: phps
              servicePort: h80
          - path: /sql
            pathType: Prefix
            backend:
              serviceName: gogo
              servicePort: h8080
---
apiVersion: v1
kind: Service
metadata:
  name: phps
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: h80
  selector:
    app.kubernetes.io/name: phps
    app.kubernetes.io/instance: phps
    app.kubernetes.io/part-of: phps
---
apiVersion: v1
kind: Service
metadata:
  name: swoole
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: h80
  selector:
    app.kubernetes.io/name: swoole
    app.kubernetes.io/instance: swoole
    app.kubernetes.io/part-of: swoole
---
apiVersion: v1
kind: Service
metadata:
  name: gogo
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: h8080
  selector:
    app.kubernetes.io/name: gogo
    app.kubernetes.io/instance: gogo
    app.kubernetes.io/part-of: gogo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swoole
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      is: swoole
      app.kubernetes.io/name: swoole
      app.kubernetes.io/instance: swoole
      app.kubernetes.io/part-of: swoole
  template:
    metadata:
      labels:
        is: swoole
        app.kubernetes.io/name: swoole
        app.kubernetes.io/instance: swoole
        app.kubernetes.io/part-of: swoole
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: swoole
          configMap:
            name: swoole
            defaultMode: 0744
            items:
              - key: os.php
                path: os.php
              - key: common.php
                path: common.php
        - name: cache
          emptyDir: { }

      containers:
        - name: fpm
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            
          image: docker.io/alptech/yuzu:shiva
          #image: openswoole/swoole:latest
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: swoole
              mountPath: /var/www/html/os.php
              subPath: os.php
            - name: swoole
              mountPath: /var/www/html/common.php
              subPath: common.php
            - name: cache
              mountPath: /cache

          command:
            - /bin/sh
            - -c
            - |
              touch monolog.log
              cd /var/www/html && php os.php & #&> /dev/null &
              tail -f monolog.log
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phps
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      is: phps
      app.kubernetes.io/name: phps
      app.kubernetes.io/instance: phps
      app.kubernetes.io/part-of: phps
  template:
    metadata:
      labels:
        is: phps
        app.kubernetes.io/name: phps
        app.kubernetes.io/instance: phps
        app.kubernetes.io/part-of: phps
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: cache
          emptyDir: { }
        - name: swoole
          configMap:
            name: swoole
            defaultMode: 0744
            items:
              - key: ps.php
                path: ps.php
              - key: common.php
                path: common.php
      containers:
        - name: fpm
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 1
          image: docker.io/alptech/yuzu:shiva
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: swoole
              mountPath: /var/www/html/index.php
              subPath: ps.php
            - name: swoole
              mountPath: /var/www/html/common.php
              subPath: common.php
            - name: cache
              mountPath: /cache

          command:
            - /bin/sh
            - -c
            - |
              touch monolog.log
              export PHP_CLI_SERVER_WORKERS=24;#yeah -)
              cd /var/www/html && php -S 0.0.0.0:80 &> /dev/null &
              tail -f monolog.log
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogo
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      is: gogo
      app.kubernetes.io/name: gogo
      app.kubernetes.io/instance: gogo
      app.kubernetes.io/part-of: gogo
  template:
    metadata:
      labels:
        is: gogo
        app.kubernetes.io/name: gogo
        app.kubernetes.io/instance: gogo
        app.kubernetes.io/part-of: gogo
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: cache
          emptyDir: { }
      containers:
        - name: fpm
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 1
          volumeMounts:
            - name: cache
              mountPath: /cache
          image: alptech/yuzu:gogo
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              cd /go && ./main
              touch monolog.log
              cd /go && ./main &
              tail -f monolog.log
